<resources>
    <string name="app_name">PreferencesFramework</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="map_title">Mapas</string>

    <!-- KEYS -->
    <string name="pref_map_enabled">pref-1</string>
    <string name="pref_un_dist">pref-2</string>
    <string name="pref_sattelite">pref-3</string>

    <string name="img_on">Imagens ligadas</string>
    <string name="img_off">Imagens desligadas</string>

    <!-- Valores a serem armazenados -->
    <string-array name="un_dist_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- Valores a serem selecionados -->
    <string-array name="un_dist_entries">
        <item>Metros</item>
        <item>Milhas</item>
    </string-array>
    <!-- Gravar os valores ao invés de gravar as entradas facilita em caso de tradução das mesmas,
    o que não alteraria o funcionamento, pois, os valore não mudam -->

    <!-- Valores default/pre-selecionados -->
    <string name="un_dist_default">1</string>
    <bool name="sattelite_default">false</bool>
    <bool name="map_enabled_default">true</bool>
        
</resources>
